clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr99079.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr99079.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i) -> u64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %15 = alloca s32i, "x", align 4
        %16 = alloca u64i, "__retval", align 8
        %17 = alloca u64i, "s", align 8
        store %arg0, %15
        %18 = const 1 : s32i
        %19 = load %15 : s32i, align 4
        shift
        %21 = cast(integral) %20 : u64i
        store %21, %17, align 8
        %22 = const 4897637220 : u64i
        %23 = load %17 : u64i, align 8
        rem
        store %24, %16
        %25 = load %16 : u64i
        return %25
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %8 = const 4 : s32i
                %9 = const 8 : s32i
                mul
                %11 = const 32 : s32i
                cmp
                if %12 {
                        %13 = const 0 : s32i
                        store %13, %0
                        %14 = load %0 : s32i
                        return %14
                }
                yield
        }
        scope {
                %4 = const 31 : s32i
                %5 = call @foo(%4) : u64i [all]
                %6 = const 4897637220 : u64i
                cmp
                if %7 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
