clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr99751.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr99751.c" (c, x86_64-unknown-linux-gnu)
global ptr1 : s32i* = #cir.ptr<null> [external, default, align 8, dso_local]
global ptr2 : s32i** = @ptr1 [external, default, align 8, dso_local]

fn identity(%arg1: s32i*) -> s32i* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i*):
        %13 = alloca s32i*, "p", align 8
        %14 = alloca s32i*, "__retval", align 8
        store %arg1, %13
        %15 = load %13 : s32i*, align 8
        store %15, %14
        %16 = load %14 : s32i*
        return %16
}
fn store_to_c(%arg0: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %8 = alloca s32i*, "p", align 8
        store %arg0, %8
        %9 = load %8 : s32i*, align 8
        %10 = call @identity(%9) : s32i* [all]
        %11 = get_global @ptr2 : s32i***
        %12 = load %11 : s32i**, align 8
        store %10, %12, align 8
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "f", align 4
    %2 = const 0 : s32i
    store %2, %0
    call @store_to_c(%1) [all]
    scope {
        %5 = get_global @ptr1 : s32i**
        %6 = load %5 : s32i*, align 8
        %7 = cmp ne %6, %1 : bool
        if %7 {
            call @abort() [all]
            yield
        }
        yield
    }
    %3 = const 0 : s32i
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
