clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__printf_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/printf-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = "hello" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = "hello\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[2] = "a" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[1] = zero [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[3] = "%s" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[3] = "%c" [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[4] = "%s\n" [cir_private, default, align 1, dso_local, constant]
global .str.7 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[6]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @printf(%4) : s32i [all]
    scope {
        %142 = get_global @printf : ((s8i*, ...) -> s32i)*
        %143 = get_global @.str : s8i[6]*
        %144 = cast(array_to_ptrdecay) %143 : s8i*
        %145 = call @printf(%144) : s32i [all]
        %146 = const 5 : s32i
        %147 = cmp ne %145, %146 : bool
        if %147 {
            %148 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %6 = get_global @printf : ((s8i*, ...) -> s32i)*
    %7 = get_global @.str.1 : s8i[7]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = call @printf(%8) : s32i [all]
    scope {
        %135 = get_global @printf : ((s8i*, ...) -> s32i)*
        %136 = get_global @.str.1 : s8i[7]*
        %137 = cast(array_to_ptrdecay) %136 : s8i*
        %138 = call @printf(%137) : s32i [all]
        %139 = const 6 : s32i
        %140 = cmp ne %138, %139 : bool
        if %140 {
            %141 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %10 = get_global @printf : ((s8i*, ...) -> s32i)*
    %11 = get_global @.str.2 : s8i[2]*
    %12 = cast(array_to_ptrdecay) %11 : s8i*
    %13 = call @printf(%12) : s32i [all]
    scope {
        %128 = get_global @printf : ((s8i*, ...) -> s32i)*
        %129 = get_global @.str.2 : s8i[2]*
        %130 = cast(array_to_ptrdecay) %129 : s8i*
        %131 = call @printf(%130) : s32i [all]
        %132 = const 1 : s32i
        %133 = cmp ne %131, %132 : bool
        if %133 {
            %134 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %14 = get_global @printf : ((s8i*, ...) -> s32i)*
    %15 = get_global @.str.3 : s8i[1]*
    %16 = cast(array_to_ptrdecay) %15 : s8i*
    %17 = call @printf(%16) : s32i [all]
    scope {
        %121 = get_global @printf : ((s8i*, ...) -> s32i)*
        %122 = get_global @.str.3 : s8i[1]*
        %123 = cast(array_to_ptrdecay) %122 : s8i*
        %124 = call @printf(%123) : s32i [all]
        %125 = const 0 : s32i
        %126 = cmp ne %124, %125 : bool
        if %126 {
            %127 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %18 = get_global @printf : ((s8i*, ...) -> s32i)*
    %19 = get_global @.str.4 : s8i[3]*
    %20 = cast(array_to_ptrdecay) %19 : s8i*
    %21 = get_global @.str : s8i[6]*
    %22 = cast(array_to_ptrdecay) %21 : s8i*
    %23 = call @printf(%20, %22) : s32i [all]
    scope {
        %112 = get_global @printf : ((s8i*, ...) -> s32i)*
        %113 = get_global @.str.4 : s8i[3]*
        %114 = cast(array_to_ptrdecay) %113 : s8i*
        %115 = get_global @.str : s8i[6]*
        %116 = cast(array_to_ptrdecay) %115 : s8i*
        %117 = call @printf(%114, %116) : s32i [all]
        %118 = const 5 : s32i
        %119 = cmp ne %117, %118 : bool
        if %119 {
            %120 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %24 = get_global @printf : ((s8i*, ...) -> s32i)*
    %25 = get_global @.str.4 : s8i[3]*
    %26 = cast(array_to_ptrdecay) %25 : s8i*
    %27 = get_global @.str.1 : s8i[7]*
    %28 = cast(array_to_ptrdecay) %27 : s8i*
    %29 = call @printf(%26, %28) : s32i [all]
    scope {
        %103 = get_global @printf : ((s8i*, ...) -> s32i)*
        %104 = get_global @.str.4 : s8i[3]*
        %105 = cast(array_to_ptrdecay) %104 : s8i*
        %106 = get_global @.str.1 : s8i[7]*
        %107 = cast(array_to_ptrdecay) %106 : s8i*
        %108 = call @printf(%105, %107) : s32i [all]
        %109 = const 6 : s32i
        %110 = cmp ne %108, %109 : bool
        if %110 {
            %111 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %30 = get_global @printf : ((s8i*, ...) -> s32i)*
    %31 = get_global @.str.4 : s8i[3]*
    %32 = cast(array_to_ptrdecay) %31 : s8i*
    %33 = get_global @.str.2 : s8i[2]*
    %34 = cast(array_to_ptrdecay) %33 : s8i*
    %35 = call @printf(%32, %34) : s32i [all]
    scope {
        %94 = get_global @printf : ((s8i*, ...) -> s32i)*
        %95 = get_global @.str.4 : s8i[3]*
        %96 = cast(array_to_ptrdecay) %95 : s8i*
        %97 = get_global @.str.2 : s8i[2]*
        %98 = cast(array_to_ptrdecay) %97 : s8i*
        %99 = call @printf(%96, %98) : s32i [all]
        %100 = const 1 : s32i
        %101 = cmp ne %99, %100 : bool
        if %101 {
            %102 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %36 = get_global @printf : ((s8i*, ...) -> s32i)*
    %37 = get_global @.str.4 : s8i[3]*
    %38 = cast(array_to_ptrdecay) %37 : s8i*
    %39 = get_global @.str.3 : s8i[1]*
    %40 = cast(array_to_ptrdecay) %39 : s8i*
    %41 = call @printf(%38, %40) : s32i [all]
    scope {
        %85 = get_global @printf : ((s8i*, ...) -> s32i)*
        %86 = get_global @.str.4 : s8i[3]*
        %87 = cast(array_to_ptrdecay) %86 : s8i*
        %88 = get_global @.str.3 : s8i[1]*
        %89 = cast(array_to_ptrdecay) %88 : s8i*
        %90 = call @printf(%87, %89) : s32i [all]
        %91 = const 0 : s32i
        %92 = cmp ne %90, %91 : bool
        if %92 {
            %93 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %42 = get_global @printf : ((s8i*, ...) -> s32i)*
    %43 = get_global @.str.5 : s8i[3]*
    %44 = cast(array_to_ptrdecay) %43 : s8i*
    %45 = const 120 : s32i
    %46 = call @printf(%44, %45) : s32i [all]
    scope {
        %77 = get_global @printf : ((s8i*, ...) -> s32i)*
        %78 = get_global @.str.5 : s8i[3]*
        %79 = cast(array_to_ptrdecay) %78 : s8i*
        %80 = const 120 : s32i
        %81 = call @printf(%79, %80) : s32i [all]
        %82 = const 1 : s32i
        %83 = cmp ne %81, %82 : bool
        if %83 {
            %84 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %47 = get_global @printf : ((s8i*, ...) -> s32i)*
    %48 = get_global @.str.6 : s8i[4]*
    %49 = cast(array_to_ptrdecay) %48 : s8i*
    %50 = get_global @.str.1 : s8i[7]*
    %51 = cast(array_to_ptrdecay) %50 : s8i*
    %52 = call @printf(%49, %51) : s32i [all]
    scope {
        %68 = get_global @printf : ((s8i*, ...) -> s32i)*
        %69 = get_global @.str.6 : s8i[4]*
        %70 = cast(array_to_ptrdecay) %69 : s8i*
        %71 = get_global @.str.1 : s8i[7]*
        %72 = cast(array_to_ptrdecay) %71 : s8i*
        %73 = call @printf(%70, %72) : s32i [all]
        %74 = const 7 : s32i
        %75 = cmp ne %73, %74 : bool
        if %75 {
            %76 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %53 = get_global @printf : ((s8i*, ...) -> s32i)*
    %54 = get_global @.str.7 : s8i[4]*
    %55 = cast(array_to_ptrdecay) %54 : s8i*
    %56 = const 0 : s32i
    %57 = call @printf(%55, %56) : s32i [all]
    scope {
        %60 = get_global @printf : ((s8i*, ...) -> s32i)*
        %61 = get_global @.str.7 : s8i[4]*
        %62 = cast(array_to_ptrdecay) %61 : s8i*
        %63 = const 0 : s32i
        %64 = call @printf(%62, %63) : s32i [all]
        %65 = const 2 : s32i
        %66 = cmp ne %64, %65 : bool
        if %66 {
            %67 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %58 = const 0 : s32i
    store %58, %0
    %59 = load %0 : s32i
    return %59
}
